Small changed - Fixed z-index for App so root does block interactive elements and corrected z-index for affected elements. - Moved Heeader css to it's own file 'Header.css'. - Added max-width for contentContainer. - Added subtle pulse animation for getStartedButtons. - Added title text for section 2 of page 'Experience the difference'

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   --font-header-weight: 700;
   overflow-x: hidden;
   --basic-text: white;
+  --font-family: sans-serif;
+  --title-size: 40px;
 }
 
 .App {
@@ -9,7 +11,7 @@
   width: 100%;
   min-height: 100vh;
   position: relative;
-  z-index: -10;
+  font-family: sans-serif;
 
   background: linear-gradient(
     200deg,rgba(255, 210, 215, 1) 
@@ -18,113 +20,18 @@
 }
 
 
-/* Header */
-.headerContainer {
-  background-color: #000000;
-  max-width: 100vw;
-  height: 4.5rem;
-  display: flex;
-  position: relative;
-  z-index: 10;
-  
-}
-
-.headerWidth {
-  width: 1170px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding-right: 30px;
-  padding-left: 30px;
-}
-
-.logoContainer {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
-}
-.headerTitle {
-  color: white;
-  font-size: 20px;
-  font-weight: var(--font-header-weight);
-  text-decoration: none;
-}
-.headerAnimation {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-left: 10px;
-}
-
-.headerAnimation div {
-  border: 1px solid black;
-  border-radius: 30%;
-  background-color: white;
-  height: 10px;
-  width: 10px;
-}
-.wave1{
-  animation: waveAnimation 1s ease-in infinite;
-}
-.wave2{
-  animation: waveAnimation 1s ease-in infinite;
-  animation-delay: 0.2s;
-}
-.wave3{
-  animation: waveAnimation 1s ease-in infinite;
-  animation-delay: 0.4s;
-}
-@keyframes waveAnimation {
-  0%, 100% {
-    height: 10px;
-  }
-  30%, 70% {
-    background-color: white;
-  }
-  50% {
-    background-color: rgb(0, 216, 0);
-    height: 15px;
-  }
-}
-
-
-
-
-.headerOptionsRight {
-  color: white; 
-  display: flex;
-  flex-direction: row;
-  flex: 2;
-  justify-content: end;
-}
-
-.headerOptionsRight a {
-  font-size: 18px;
-  font-weight: var(--font-header-weight);
-  padding-right: 15px;
-  padding-left: 15px;
-  text-decoration: none;
-  color: white;
-}
-
-.downloadSignUpBorder {
-  border-right: 2px solid white;
-  margin-left: 20px;
-  margin-right: 20px;
-
-}
-
-  
 
 
 .contentContainer {
-
+  display:flex;
+  flex-direction: column;
   border: 1px solid white;
-  
-  width: 900px;
+
+  width: 95%;
+  max-width: 1100px;
   justify-self: center;
+
+  position: relative;
   z-index: 10;
 }
 
@@ -140,8 +47,8 @@
 
 .withoutLimitsText1 {
   color: var(--basic-text);
-  font-weight: 700;
-  font-size: 45px;
+  font-weight: var(--font-header-weight);
+  font-size: var(--title-size)
 }
 
 .withoutLimitsText2 {
@@ -165,17 +72,31 @@
 
 .getStartedButton {
   color: black;
-  font-size: 18;
+  font-size: 18px;
   font-weight: 700;
   background-color: #FFD2D7;
   border-radius: 30px;
   padding: 15px 27px 15px 27px;
   text-decoration: none;
+  border: 1px solid #FFD2D7;
+}
+
+.getStartedButton:hover {
+  animation: buttonHoverAnimation 2s ease-in infinite;
+}
+
+@keyframes buttonHoverAnimation {
+  0%, 100% {
+    border: 1px solid gray;
+  }
+  50% {
+    border: 2px solid lightgray;
+  }
 }
 
 .viewAllPlansButton {
   color: white;
-  font-size: 18;
+  font-size: 18px;
   font-weight: 700;
   background-color: #000000;
   border: 1px solid gray;
@@ -185,14 +106,37 @@
   margin-left: 20px;
 }
 
+.viewAllPlansButton:hover {
+  animation: buttonHoverAnimation 2s ease-in infinite;
+}
+
 .termsText {
   color: white;
-  width: 330px;
   font-size: 12px;
   margin-top: 2rem;
+  font-weight: 400;
 }
 
 .termsTextLink {
   color: white;
 }
 
+.experienceContainer {
+  border: 1px solid white;
+  color: var(--basic-text);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 12rem;
+}
+
+.differenceText {
+  font-size: var(--title-size);
+  font-weight: var(--font-header-weight);
+  margin-bottom: 10px;
+}
+
+.goPremiumText {
+  font-weight: 400;
+  font-size: 24px;
+}
