--- a/src/Components/Vinyl/Vinyl.css
+++ b/src/Components/Vinyl/Vinyl.css
@@ -4,7 +4,7 @@
     position: absolute;
     margin-left: 50%;
     transform: rotate(-5deg);
-    z-index: -1;
+    z-index: 1;
 }
 
 .vinylImage {
